11 Nov 97: Released TclX 8.0.1
===============================================================================
28 Nov 97:
  o Merge in new auto_load from Tcl 8.0p2.
  o Several minor fixes.
===============================================================================
29 Nov 97: Released TclX 8.0.2
===============================================================================
22 Jan 98: 
  o Added fixes for handling some corner cases in saving and restoring
    interp state on signals. Debugged and submitted by the ever-helpful
    <Viktor-Dukhovni@deshaw.com>.
-------------------------------------------------------------------------------
2 Feb 98:
  o Added --with-tcl dir and --with-tk configure options.  Contributed by
    <Viktor-Dukhovni@deshaw.com>.
-------------------------------------------------------------------------------
22 Jan 98: 
  o Added fixes for handling some corner cases in saving and restoring
    interp state on signals. Debugged and submitted by the ever-helpful
    <Viktor-Dukhovni@deshaw.com>.
-------------------------------------------------------------------------------
25 Apr 98:
  o Fixed bug with .tndx libraries and references to commands in namespaces.
-------------------------------------------------------------------------------
7 Aug 98:
  o Added -restart option to the signal command.
-------------------------------------------------------------------------------
8 Aug 98: Released TclX 8.0.3
===============================================================================
19 Sept 98:
  o Fixed TclX copy of Tcl auto_load proc out of sync; this broken ITcl.
-------------------------------------------------------------------------------
20 Sept 98:
  o Include several Windows build fixes from Viktor Dukhovni <viktor@nyc.deshaw.com>.
  o Renamed --with-tk configure option to --enable-tk.
    Supplied by Viktor Dukhovni <viktor@nyc.deshaw.com>.
-------------------------------------------------------------------------------